[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Persona (1).png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 29.5 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Character" type="Sprite" parent="."]
scale = Vector2( 3, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_bottom = 600
drag_margin_h_enabled = true
drag_margin_v_enabled = true
editor_draw_screen = false
editor_draw_limits = true

[node name="DashTimer" type="Timer" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ShootRay" type="RayCast2D" parent="."]
position = Vector2( 0, 13 )
scale = Vector2( 8.48, 1 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
